--- a/app/views/deployments/show.html.erb
+++ b/app/views/deployments/show.html.erb
@@ -1,25 +1,27 @@
-<p id="notice"><%= notice %></p>
+<%- model_class = Deployment -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => model_class.model_name.human %></h1>
+</div>
 
-<p>
-  <b>City:</b>
-  <%= link_to_name @deployment.city %>
-</p>
+<dl class="dl-horizontal">
+  <dt><strong><%= model_class.human_attribute_name(:city_id) %>:</strong></dt>
+  <dd><%= @deployment.city_id %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:team_id) %>:</strong></dt>
+  <dd><%= @deployment.team_id %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:start_time) %>:</strong></dt>
+  <dd><%= @deployment.start_time %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:end_time) %>:</strong></dt>
+  <dd><%= @deployment.end_time %></dd>
+</dl>
 
-<p>
-  <b>Team:</b>
-  <%= link_to_name @deployment.team %>
-</p>
-
-<p>
-  <b>Start time:</b>
-  <%= @deployment.start_time %>
-</p>
-
-<p>
-  <b>End time:</b>
-  <%= @deployment.end_time %>
-</p>
-
-
-<%= link_to 'Edit', edit_deployment_path(@deployment) %> |
-<%= link_to 'Back', deployments_path %>
+<div class="form-actions">
+  <%= link_to t('.back', :default => t("helpers.links.back")),
+              deployments_path, :class => 'btn'  %>
+  <%= link_to t('.edit', :default => t("helpers.links.edit")),
+              edit_deployment_path(@deployment), :class => 'btn' %>
+  <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+              deployment_path(@deployment),
+              :method => 'delete',
+              :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
+              :class => 'btn btn-danger' %>
+</div>
