--- a/app/views/streets/index.html.erb
+++ b/app/views/streets/index.html.erb
@@ -1,25 +1,38 @@
-<h1>Listing streets</h1>
-
-<table>
-  <tr>
-    <th>Name</th>
-    <th>City</th>
-    <th></th>
-    <th></th>
-    <th></th>
-  </tr>
-
-<% @streets.each do |street| %>
-  <tr>
-    <td><%= street.name %></td>
-    <td><%= street.city.name %></td>
-    <td><%= link_to 'Show', street %></td>
-    <td><%= link_to 'Edit', edit_street_path(street) %></td>
-    <td><%= link_to 'Destroy', street, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-  </tr>
-<% end %>
+<%- model_class = Street -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => model_class.model_name.human.pluralize %></h1>
+</div>
+<table class="table table-striped">
+  <thead>
+    <tr>
+      <th><%= model_class.human_attribute_name(:id) %></th>
+      <th><%= model_class.human_attribute_name(:name) %></th>
+      <th><%= model_class.human_attribute_name(:city_id) %></th>
+      <th><%= model_class.human_attribute_name(:created_at) %></th>
+      <th><%=t '.actions', :default => t("helpers.actions") %></th>
+    </tr>
+  </thead>
+  <tbody>
+    <% @streets.each do |street| %>
+      <tr>
+        <td><%= link_to street.id, street_path(street) %></td>
+        <td><%= street.name %></td>
+        <td><%= street.city_id %></td>
+        <td><%=l street.created_at %></td>
+        <td>
+          <%= link_to t('.edit', :default => t("helpers.links.edit")),
+                      edit_street_path(street), :class => 'btn btn-mini' %>
+          <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+                      street_path(street),
+                      :method => :delete,
+                      :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
+                      :class => 'btn btn-mini btn-danger' %>
+        </td>
+      </tr>
+    <% end %>
+  </tbody>
 </table>
 
-<br />
-
-<%= link_to 'New Street', new_street_path %>
+<%= link_to t('.new', :default => t("helpers.links.new")),
+            new_street_path,
+            :class => 'btn btn-primary' %>
