--- a/app/views/addresses/index.html.erb
+++ b/app/views/addresses/index.html.erb
@@ -1,27 +1,48 @@
-<h1>Listing addresses</h1>
-
-<table>
-  <tr>
-    <th>Street number</th>
-    <th>Street</th>
-    <th>Zip</th>
-    <th></th>
-    <th></th>
-    <th></th>
-  </tr>
-
-<% @addresses.each do |address| %>
-  <tr>
-    <td><%= address.street_number %></td>
-    <td><%= address.street.name %></td>
-    <td><%= address.zip_code %></td>
-    <td><%= link_to 'Show', address %></td>
-    <td><%= link_to 'Edit', edit_address_path(address) %></td>
-    <td><%= link_to 'Destroy', address, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-  </tr>
-<% end %>
+<%- model_class = Addres -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => model_class.model_name.human.pluralize %></h1>
+</div>
+<table class="table table-striped">
+  <thead>
+    <tr>
+      <th><%= model_class.human_attribute_name(:id) %></th>
+      <th><%= model_class.human_attribute_name(:street_number) %></th>
+      <th><%= model_class.human_attribute_name(:street_id) %></th>
+      <th><%= model_class.human_attribute_name(:latitude) %></th>
+      <th><%= model_class.human_attribute_name(:longitude) %></th>
+      <th><%= model_class.human_attribute_name(:gmaps) %></th>
+      <th><%= model_class.human_attribute_name(:zip_code) %></th>
+      <th><%= model_class.human_attribute_name(:neighborhood_id) %></th>
+      <th><%= model_class.human_attribute_name(:created_at) %></th>
+      <th><%=t '.actions', :default => t("helpers.actions") %></th>
+    </tr>
+  </thead>
+  <tbody>
+    <% @addresses.each do |address| %>
+      <tr>
+        <td><%= link_to address.id, address_path(address) %></td>
+        <td><%= address.street_number %></td>
+        <td><%= address.street_id %></td>
+        <td><%= address.latitude %></td>
+        <td><%= address.longitude %></td>
+        <td><%= address.gmaps %></td>
+        <td><%= address.zip_code %></td>
+        <td><%= address.neighborhood_id %></td>
+        <td><%=l address.created_at %></td>
+        <td>
+          <%= link_to t('.edit', :default => t("helpers.links.edit")),
+                      edit_address_path(address), :class => 'btn btn-mini' %>
+          <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+                      address_path(address),
+                      :method => :delete,
+                      :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
+                      :class => 'btn btn-mini btn-danger' %>
+        </td>
+      </tr>
+    <% end %>
+  </tbody>
 </table>
 
-<br />
-
-<%= link_to 'New Address', new_address_path %>
+<%= link_to t('.new', :default => t("helpers.links.new")),
+            new_address_path,
+            :class => 'btn btn-primary' %>
