--- a/app/views/addresses/show.html.erb
+++ b/app/views/addresses/show.html.erb
@@ -1,26 +1,33 @@
-<p id="notice"><%= notice %></p>
+<%- model_class = Addres -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => model_class.model_name.human %></h1>
+</div>
 
-<p>
-  <b>Street number:</b>
-  <%= @address.street_number %>
-</p>
+<dl class="dl-horizontal">
+  <dt><strong><%= model_class.human_attribute_name(:street_number) %>:</strong></dt>
+  <dd><%= @address.street_number %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:street_id) %>:</strong></dt>
+  <dd><%= @address.street_id %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:latitude) %>:</strong></dt>
+  <dd><%= @address.latitude %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:longitude) %>:</strong></dt>
+  <dd><%= @address.longitude %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:gmaps) %>:</strong></dt>
+  <dd><%= @address.gmaps %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:zip_code) %>:</strong></dt>
+  <dd><%= @address.zip_code %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:neighborhood_id) %>:</strong></dt>
+  <dd><%= @address.neighborhood_id %></dd>
+</dl>
 
-<p>
-  <b>Street:</b>
-  <%= @address.street.name %>
-</p>
-
-<p>
-  <b>Zip:</b>
-  <%= @address.zip_code %>
-</p>
-
-<p>
-  <b>Neighborhood:</b>
-  <%= link_to_name @address.neighborhood %>
-</p>
-
-<%= gmaps(:markers => {:data => @address.to_gmaps4rails}, :map_options => {:auto_zoom => false, :zoom => 14, :detect_location => true}) %>
-
-<%= link_to 'Edit', edit_address_path(@address) %> |
-<%= link_to 'Back', addresses_path %>
+<div class="form-actions">
+  <%= link_to t('.back', :default => t("helpers.links.back")),
+              addresses_path, :class => 'btn'  %>
+  <%= link_to t('.edit', :default => t("helpers.links.edit")),
+              edit_address_path(@address), :class => 'btn' %>
+  <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+              address_path(@address),
+              :method => 'delete',
+              :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
+              :class => 'btn btn-danger' %>
+</div>
