--- a/app/views/aptitudes/index.html.erb
+++ b/app/views/aptitudes/index.html.erb
@@ -1,29 +1,42 @@
-<h1>Listing aptitudes</h1>
-
-<table>
-  <tr>
-    <th>Person</th>
-    <th><%= link_to 'Skill', :sort => 'skill' %></th>
-    <th>Level</th>
-    <th>Description</th>
-    <th></th>
-    <th></th>
-    <th></th>
-  </tr>
-
-<% @aptitudes.each do |aptitude| %>
-  <tr>
-    <td><%= link_to_name aptitude.person %></td>
-    <td><%= link_to_name aptitude.skill %></td>
-    <td><%= aptitude.level %></td>
-    <td><%= aptitude.description %></td>
-    <td><%= link_to 'Show', aptitude %></td>
-    <td><%= link_to 'Edit', edit_aptitude_path(aptitude) %></td>
-    <td><%= link_to 'Destroy', aptitude, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-  </tr>
-<% end %>
+<%- model_class = Aptitude -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => model_class.model_name.human.pluralize %></h1>
+</div>
+<table class="table table-striped">
+  <thead>
+    <tr>
+      <th><%= model_class.human_attribute_name(:id) %></th>
+      <th><%= model_class.human_attribute_name(:person_id) %></th>
+      <th><%= model_class.human_attribute_name(:skill_id) %></th>
+      <th><%= model_class.human_attribute_name(:level) %></th>
+      <th><%= model_class.human_attribute_name(:description) %></th>
+      <th><%= model_class.human_attribute_name(:created_at) %></th>
+      <th><%=t '.actions', :default => t("helpers.actions") %></th>
+    </tr>
+  </thead>
+  <tbody>
+    <% @aptitudes.each do |aptitude| %>
+      <tr>
+        <td><%= link_to aptitude.id, aptitude_path(aptitude) %></td>
+        <td><%= aptitude.person_id %></td>
+        <td><%= aptitude.skill_id %></td>
+        <td><%= aptitude.level %></td>
+        <td><%= aptitude.description %></td>
+        <td><%=l aptitude.created_at %></td>
+        <td>
+          <%= link_to t('.edit', :default => t("helpers.links.edit")),
+                      edit_aptitude_path(aptitude), :class => 'btn btn-mini' %>
+          <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+                      aptitude_path(aptitude),
+                      :method => :delete,
+                      :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
+                      :class => 'btn btn-mini btn-danger' %>
+        </td>
+      </tr>
+    <% end %>
+  </tbody>
 </table>
 
-<br />
-
-<%= link_to 'New Aptitude', new_aptitude_path %>
+<%= link_to t('.new', :default => t("helpers.links.new")),
+            new_aptitude_path,
+            :class => 'btn btn-primary' %>
