--- a/app/views/aptitudes/show.html.erb
+++ b/app/views/aptitudes/show.html.erb
@@ -1,25 +1,27 @@
-<p id="notice"><%= notice %></p>
+<%- model_class = Aptitude -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => model_class.model_name.human %></h1>
+</div>
 
-<p>
-  <b>Person:</b>
-  <%= link_to_name @aptitude.person %>
-</p>
+<dl class="dl-horizontal">
+  <dt><strong><%= model_class.human_attribute_name(:person_id) %>:</strong></dt>
+  <dd><%= @aptitude.person_id %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:skill_id) %>:</strong></dt>
+  <dd><%= @aptitude.skill_id %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:level) %>:</strong></dt>
+  <dd><%= @aptitude.level %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:description) %>:</strong></dt>
+  <dd><%= @aptitude.description %></dd>
+</dl>
 
-<p>
-  <b>Skill:</b>
-  <%= link_to_name @aptitude.skill %>
-</p>
-
-<p>
-  <b>Level:</b>
-  <%= @aptitude.level %>
-</p>
-
-<p>
-  <b>Description:</b>
-  <%= @aptitude.description %>
-</p>
-
-
-<%= link_to 'Edit', edit_aptitude_path(@aptitude) %> |
-<%= link_to 'Back', aptitudes_path %>
+<div class="form-actions">
+  <%= link_to t('.back', :default => t("helpers.links.back")),
+              aptitudes_path, :class => 'btn'  %>
+  <%= link_to t('.edit', :default => t("helpers.links.edit")),
+              edit_aptitude_path(@aptitude), :class => 'btn' %>
+  <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+              aptitude_path(@aptitude),
+              :method => 'delete',
+              :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
+              :class => 'btn btn-danger' %>
+</div>
