--- a/app/views/assignments/_form.html.erb
+++ b/app/views/assignments/_form.html.erb
@@ -1,25 +1,20 @@
-<%= form_for(@assignment) do |f| %>
-  <% if @assignment.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@assignment.errors.count, "error") %> prohibited this assignment from being saved:</h2>
-
-      <ul>
-      <% @assignment.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
-      <% end %>
-      </ul>
+<%= form_for @assignment, :html => { :class => 'form-horizontal' } do |f| %>
+  <div class="control-group">
+    <%= f.label :operations_center_id, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.number_field :operations_center_id, :class => 'number_field' %>
     </div>
-  <% end %>
+  </div>
+  <div class="control-group">
+    <%= f.label :task_id, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.number_field :task_id, :class => 'number_field' %>
+    </div>
+  </div>
 
-  <div class="field">
-    <%= f.label :operations_center_id %><br />
-    <%= f.select :operations_center_id, options_from_collection_for_select(OperationsCenter.all, :id, :name) %>
-  </div>
-  <div class="field">
-    <%= f.label :task_id %><br />
-    <%= f.select :task_id, options_from_collection_for_select(Task.all, :id, :name) %>
-  </div>
-  <div class="actions">
-    <%= f.submit %>
+  <div class="form-actions">
+    <%= f.submit nil, :class => 'btn btn-primary' %>
+    <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
+                assignments_path, :class => 'btn' %>
   </div>
 <% end %>
