--- a/app/views/assignments/show.html.erb
+++ b/app/views/assignments/show.html.erb
@@ -1,15 +1,23 @@
-<p id="notice"><%= notice %></p>
+<%- model_class = Assignment -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => model_class.model_name.human %></h1>
+</div>
 
-<p>
-  <b>Operations Center:</b>
-  <%= link_to_name @assignment.operations_center %>
-</p>
+<dl class="dl-horizontal">
+  <dt><strong><%= model_class.human_attribute_name(:operations_center_id) %>:</strong></dt>
+  <dd><%= @assignment.operations_center_id %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:task_id) %>:</strong></dt>
+  <dd><%= @assignment.task_id %></dd>
+</dl>
 
-<p>
-  <b>Task:</b>
-  <%= link_to_name @assignment.task %>
-</p>
-
-
-<%= link_to 'Edit', edit_assignment_path(@assignment) %> |
-<%= link_to 'Back', assignments_path %>
+<div class="form-actions">
+  <%= link_to t('.back', :default => t("helpers.links.back")),
+              assignments_path, :class => 'btn'  %>
+  <%= link_to t('.edit', :default => t("helpers.links.edit")),
+              edit_assignment_path(@assignment), :class => 'btn' %>
+  <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+              assignment_path(@assignment),
+              :method => 'delete',
+              :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
+              :class => 'btn btn-danger' %>
+</div>
