--- a/app/views/cities/show.html.erb
+++ b/app/views/cities/show.html.erb
@@ -1,21 +1,21 @@
-<p id="notice"><%= notice %></p>
-
-<p>
-  <b><%= @city.name %></b>
-</p>
-
-<div id="addresses">
-  <% @addresses.each do |address| %>
-    <%= div_for address do %>
-      <%= link_to_name address %>
-      <% address.tasks.each do |task| %>
-        <%= div_for task do %>
-          <%= link_to_name task %>
-        <% end %>
-      <% end %>
-    <% end %>
-  <% end %>
+<%- model_class = City -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => model_class.model_name.human %></h1>
 </div>
 
-<%= link_to 'Edit', edit_city_path(@city) %> |
-<%= link_to 'Back', cities_path %>
+<dl class="dl-horizontal">
+  <dt><strong><%= model_class.human_attribute_name(:name) %>:</strong></dt>
+  <dd><%= @city.name %></dd>
+</dl>
+
+<div class="form-actions">
+  <%= link_to t('.back', :default => t("helpers.links.back")),
+              cities_path, :class => 'btn'  %>
+  <%= link_to t('.edit', :default => t("helpers.links.edit")),
+              edit_city_path(@city), :class => 'btn' %>
+  <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+              city_path(@city),
+              :method => 'delete',
+              :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
+              :class => 'btn btn-danger' %>
+</div>
