--- a/app/views/dispatches/index.html.erb
+++ b/app/views/dispatches/index.html.erb
@@ -1,27 +1,40 @@
-<h1>Listing dispatches</h1>
-
-<table>
-  <tr>
-    <th>Team</th>
-    <th>Task</th>
-    <th>Dispatcher</th>
-    <th></th>
-    <th></th>
-    <th></th>
-  </tr>
-
-<% @dispatches.each do |dispatch| %>
-  <tr>
-    <td><%= link_to_name dispatch.team %></td>
-    <td><%= link_to_name dispatch.task %></td>
-    <td><%= link_to_name dispatch.person %></td>
-    <td><%= link_to 'Show', dispatch %></td>
-    <td><%= link_to 'Edit', edit_dispatch_path(dispatch) %></td>
-    <td><%= link_to 'Destroy', dispatch, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-  </tr>
-<% end %>
+<%- model_class = Dispatch -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => model_class.model_name.human.pluralize %></h1>
+</div>
+<table class="table table-striped">
+  <thead>
+    <tr>
+      <th><%= model_class.human_attribute_name(:id) %></th>
+      <th><%= model_class.human_attribute_name(:team_id) %></th>
+      <th><%= model_class.human_attribute_name(:task_id) %></th>
+      <th><%= model_class.human_attribute_name(:person_id) %></th>
+      <th><%= model_class.human_attribute_name(:created_at) %></th>
+      <th><%=t '.actions', :default => t("helpers.actions") %></th>
+    </tr>
+  </thead>
+  <tbody>
+    <% @dispatches.each do |dispatch| %>
+      <tr>
+        <td><%= link_to dispatch.id, dispatch_path(dispatch) %></td>
+        <td><%= dispatch.team_id %></td>
+        <td><%= dispatch.task_id %></td>
+        <td><%= dispatch.person_id %></td>
+        <td><%=l dispatch.created_at %></td>
+        <td>
+          <%= link_to t('.edit', :default => t("helpers.links.edit")),
+                      edit_dispatch_path(dispatch), :class => 'btn btn-mini' %>
+          <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+                      dispatch_path(dispatch),
+                      :method => :delete,
+                      :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
+                      :class => 'btn btn-mini btn-danger' %>
+        </td>
+      </tr>
+    <% end %>
+  </tbody>
 </table>
 
-<br />
-
-<%= link_to 'New Dispatch', new_dispatch_path %>
+<%= link_to t('.new', :default => t("helpers.links.new")),
+            new_dispatch_path,
+            :class => 'btn btn-primary' %>
