--- a/app/views/dispatches/new.html.erb
+++ b/app/views/dispatches/new.html.erb
@@ -1,5 +1,6 @@
-<h1>New dispatch</h1>
-
-<%= render 'form' %>
-
-<%= link_to 'Back', dispatches_path %>
+<%- model_class = Dispatch -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => t('helpers.titles.new', :model => model_class.model_name.human,
+                                 :default => "New #{model_class.model_name.human}") %></h1>
+</div>
+<%= render :partial => 'form' %>
