--- a/app/views/dispatches/show.html.erb
+++ b/app/views/dispatches/show.html.erb
@@ -1,20 +1,25 @@
-<p id="notice"><%= notice %></p>
+<%- model_class = Dispatch -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => model_class.model_name.human %></h1>
+</div>
 
-<p>
-  <b>Team:</b>
-  <%= link_to_name @dispatch.team %>
-</p>
+<dl class="dl-horizontal">
+  <dt><strong><%= model_class.human_attribute_name(:team_id) %>:</strong></dt>
+  <dd><%= @dispatch.team_id %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:task_id) %>:</strong></dt>
+  <dd><%= @dispatch.task_id %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:person_id) %>:</strong></dt>
+  <dd><%= @dispatch.person_id %></dd>
+</dl>
 
-<p>
-  <b>Task:</b>
-  <%= link_to_name @dispatch.task %>
-</p>
-
-<p>
-  <b>Person:</b>
-  <%= link_to_name @dispatch.person %>
-</p>
-
-
-<%= link_to 'Edit', edit_dispatch_path(@dispatch) %> |
-<%= link_to 'Back', dispatches_path %>
+<div class="form-actions">
+  <%= link_to t('.back', :default => t("helpers.links.back")),
+              dispatches_path, :class => 'btn'  %>
+  <%= link_to t('.edit', :default => t("helpers.links.edit")),
+              edit_dispatch_path(@dispatch), :class => 'btn' %>
+  <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+              dispatch_path(@dispatch),
+              :method => 'delete',
+              :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
+              :class => 'btn btn-danger' %>
+</div>
