--- a/app/views/neighborhoods/index.html.erb
+++ b/app/views/neighborhoods/index.html.erb
@@ -1,25 +1,38 @@
-<h1>Listing neighborhoods</h1>
-
-<table>
-  <tr>
-    <th>Name</th>
-    <th>City</th>
-    <th></th>
-    <th></th>
-    <th></th>
-  </tr>
-
-<% @neighborhoods.each do |neighborhood| %>
-  <tr>
-    <td><%= neighborhood.name %></td>
-    <td><%= neighborhood.city.name %></td>
-    <td><%= link_to 'Show', neighborhood %></td>
-    <td><%= link_to 'Edit', edit_neighborhood_path(neighborhood) %></td>
-    <td><%= link_to 'Destroy', neighborhood, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-  </tr>
-<% end %>
+<%- model_class = Neighborhood -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => model_class.model_name.human.pluralize %></h1>
+</div>
+<table class="table table-striped">
+  <thead>
+    <tr>
+      <th><%= model_class.human_attribute_name(:id) %></th>
+      <th><%= model_class.human_attribute_name(:name) %></th>
+      <th><%= model_class.human_attribute_name(:city_id) %></th>
+      <th><%= model_class.human_attribute_name(:created_at) %></th>
+      <th><%=t '.actions', :default => t("helpers.actions") %></th>
+    </tr>
+  </thead>
+  <tbody>
+    <% @neighborhoods.each do |neighborhood| %>
+      <tr>
+        <td><%= link_to neighborhood.id, neighborhood_path(neighborhood) %></td>
+        <td><%= neighborhood.name %></td>
+        <td><%= neighborhood.city_id %></td>
+        <td><%=l neighborhood.created_at %></td>
+        <td>
+          <%= link_to t('.edit', :default => t("helpers.links.edit")),
+                      edit_neighborhood_path(neighborhood), :class => 'btn btn-mini' %>
+          <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+                      neighborhood_path(neighborhood),
+                      :method => :delete,
+                      :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
+                      :class => 'btn btn-mini btn-danger' %>
+        </td>
+      </tr>
+    <% end %>
+  </tbody>
 </table>
 
-<br />
-
-<%= link_to 'New Neighborhood', new_neighborhood_path %>
+<%= link_to t('.new', :default => t("helpers.links.new")),
+            new_neighborhood_path,
+            :class => 'btn btn-primary' %>
