--- a/app/views/neighborhoods/show.html.erb
+++ b/app/views/neighborhoods/show.html.erb
@@ -1,24 +1,23 @@
-<p id="notice"><%= notice %></p>
-
-<p>
-  <b>Name:</b>
-  <%= @neighborhood.name %>
-</p>
-
-<p>
-  <b>City:</b>
-  <%= link_to @neighborhood.city.name, @neighborhood.city %>
-</p>
-
-<div id="units">
-  <% @units.each do |unit| %>
-    <%= div_for unit do %>
-      <%= link_to_name unit %>
-    <% end %>
-  <% end %>
+<%- model_class = Neighborhood -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => model_class.model_name.human %></h1>
 </div>
 
-<%#= gmaps({:map_options => {:auto_zoom => false, :zoom => 14}, :markers => (@units.map do |u| {:data => u.address.to_gmaps4rails})}) %>
+<dl class="dl-horizontal">
+  <dt><strong><%= model_class.human_attribute_name(:name) %>:</strong></dt>
+  <dd><%= @neighborhood.name %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:city_id) %>:</strong></dt>
+  <dd><%= @neighborhood.city_id %></dd>
+</dl>
 
-<%= link_to 'Edit', edit_neighborhood_path(@neighborhood) %> |
-<%= link_to 'Back', neighborhoods_path %>
+<div class="form-actions">
+  <%= link_to t('.back', :default => t("helpers.links.back")),
+              neighborhoods_path, :class => 'btn'  %>
+  <%= link_to t('.edit', :default => t("helpers.links.edit")),
+              edit_neighborhood_path(@neighborhood), :class => 'btn' %>
+  <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+              neighborhood_path(@neighborhood),
+              :method => 'delete',
+              :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
+              :class => 'btn btn-danger' %>
+</div>
