--- a/app/views/operations_centers/index.html.erb
+++ b/app/views/operations_centers/index.html.erb
@@ -1,27 +1,40 @@
-<h1>Listing operations_centers</h1>
-
-<table>
-  <tr>
-    <th>Name</th>
-    <th>Description</th>
-    <th>Unit</th>
-    <th></th>
-    <th></th>
-    <th></th>
-  </tr>
-
-<% @operations_centers.each do |operations_center| %>
-  <tr>
-    <td><%= operations_center.name %></td>
-    <td><%= operations_center.description %></td>
-    <td><%= link_to_name operations_center.unit %></td>
-    <td><%= link_to 'Show', operations_center %></td>
-    <td><%= link_to 'Edit', edit_operations_center_path(operations_center) %></td>
-    <td><%= link_to 'Destroy', operations_center, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-  </tr>
-<% end %>
+<%- model_class = OperationsCenter -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => model_class.model_name.human.pluralize %></h1>
+</div>
+<table class="table table-striped">
+  <thead>
+    <tr>
+      <th><%= model_class.human_attribute_name(:id) %></th>
+      <th><%= model_class.human_attribute_name(:name) %></th>
+      <th><%= model_class.human_attribute_name(:description) %></th>
+      <th><%= model_class.human_attribute_name(:unit_id) %></th>
+      <th><%= model_class.human_attribute_name(:created_at) %></th>
+      <th><%=t '.actions', :default => t("helpers.actions") %></th>
+    </tr>
+  </thead>
+  <tbody>
+    <% @operations_centers.each do |operations_center| %>
+      <tr>
+        <td><%= link_to operations_center.id, operations_center_path(operations_center) %></td>
+        <td><%= operations_center.name %></td>
+        <td><%= operations_center.description %></td>
+        <td><%= operations_center.unit_id %></td>
+        <td><%=l operations_center.created_at %></td>
+        <td>
+          <%= link_to t('.edit', :default => t("helpers.links.edit")),
+                      edit_operations_center_path(operations_center), :class => 'btn btn-mini' %>
+          <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+                      operations_center_path(operations_center),
+                      :method => :delete,
+                      :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
+                      :class => 'btn btn-mini btn-danger' %>
+        </td>
+      </tr>
+    <% end %>
+  </tbody>
 </table>
 
-<br />
-
-<%= link_to 'New Operations center', new_operations_center_path %>
+<%= link_to t('.new', :default => t("helpers.links.new")),
+            new_operations_center_path,
+            :class => 'btn btn-primary' %>
