--- a/app/views/operations_centers/show.html.erb
+++ b/app/views/operations_centers/show.html.erb
@@ -1,20 +1,25 @@
-<p id="notice"><%= notice %></p>
+<%- model_class = OperationsCenter -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => model_class.model_name.human %></h1>
+</div>
 
-<p>
-  <b>Name:</b>
-  <%= @operations_center.name %>
-</p>
+<dl class="dl-horizontal">
+  <dt><strong><%= model_class.human_attribute_name(:name) %>:</strong></dt>
+  <dd><%= @operations_center.name %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:description) %>:</strong></dt>
+  <dd><%= @operations_center.description %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:unit_id) %>:</strong></dt>
+  <dd><%= @operations_center.unit_id %></dd>
+</dl>
 
-<p>
-  <b>Description:</b>
-  <%= @operations_center.description %>
-</p>
-
-<p>
-  <b>Unit:</b>
-  <%= link_to_name @operations_center.unit %>
-</p>
-
-
-<%= link_to 'Edit', edit_operations_center_path(@operations_center) %> |
-<%= link_to 'Back', operations_centers_path %>
+<div class="form-actions">
+  <%= link_to t('.back', :default => t("helpers.links.back")),
+              operations_centers_path, :class => 'btn'  %>
+  <%= link_to t('.edit', :default => t("helpers.links.edit")),
+              edit_operations_center_path(@operations_center), :class => 'btn' %>
+  <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+              operations_center_path(@operations_center),
+              :method => 'delete',
+              :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
+              :class => 'btn btn-danger' %>
+</div>
