--- a/app/views/people/index.html.erb
+++ b/app/views/people/index.html.erb
@@ -1,18 +1,74 @@
-<h1>Registered Dispatchees</h1>
-
-<table>
-  <tr>
-    <th><%= link_to 'First', :sort => 'first_name' %>/
-    <%= link_to 'Last', :sort => 'last_name' %></th>
-    <th><%= link_to 'Phone #', :sort => 'phone' %></th>
-    <th><%= link_to 'Email', :sort => 'email' %></th>
-  </tr>
-
-<% @people.each do |person| %>
-  <tr>
-    <td><%= link_to_name person %></td>
-    <td><%= person.primary_phone_number %></td>
-    <td><%= mail_to person.email %></td>
-  </tr>
-<% end %>
+<%- model_class = Person -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => model_class.model_name.human.pluralize %></h1>
+</div>
+<table class="table table-striped">
+  <thead>
+    <tr>
+      <th><%= model_class.human_attribute_name(:id) %></th>
+      <th><%= model_class.human_attribute_name(:first_name) %></th>
+      <th><%= model_class.human_attribute_name(:last_name) %></th>
+      <th><%= model_class.human_attribute_name(:primary_phone_number) %></th>
+      <th><%= model_class.human_attribute_name(:date_of_birth) %></th>
+      <th><%= model_class.human_attribute_name(:signed_waiver) %></th>
+      <th><%= model_class.human_attribute_name(:email) %></th>
+      <th><%= model_class.human_attribute_name(:encrypted_password) %></th>
+      <th><%= model_class.human_attribute_name(:reset_password_token) %></th>
+      <th><%= model_class.human_attribute_name(:reset_password_sent_at) %></th>
+      <th><%= model_class.human_attribute_name(:remember_created_at) %></th>
+      <th><%= model_class.human_attribute_name(:sign_in_count) %></th>
+      <th><%= model_class.human_attribute_name(:current_sign_in_at) %></th>
+      <th><%= model_class.human_attribute_name(:last_sign_in_at) %></th>
+      <th><%= model_class.human_attribute_name(:current_sign_in_ip) %></th>
+      <th><%= model_class.human_attribute_name(:last_sign_in_ip) %></th>
+      <th><%= model_class.human_attribute_name(:confirmation_token) %></th>
+      <th><%= model_class.human_attribute_name(:confirmed_at) %></th>
+      <th><%= model_class.human_attribute_name(:confirmation_sent_at) %></th>
+      <th><%= model_class.human_attribute_name(:unconfirmed_email) %></th>
+      <th><%= model_class.human_attribute_name(:authentication_token) %></th>
+      <th><%= model_class.human_attribute_name(:created_at) %></th>
+      <th><%=t '.actions', :default => t("helpers.actions") %></th>
+    </tr>
+  </thead>
+  <tbody>
+    <% @people.each do |person| %>
+      <tr>
+        <td><%= link_to person.id, person_path(person) %></td>
+        <td><%= person.first_name %></td>
+        <td><%= person.last_name %></td>
+        <td><%= person.primary_phone_number %></td>
+        <td><%= person.date_of_birth %></td>
+        <td><%= person.signed_waiver %></td>
+        <td><%= person.email %></td>
+        <td><%= person.encrypted_password %></td>
+        <td><%= person.reset_password_token %></td>
+        <td><%= person.reset_password_sent_at %></td>
+        <td><%= person.remember_created_at %></td>
+        <td><%= person.sign_in_count %></td>
+        <td><%= person.current_sign_in_at %></td>
+        <td><%= person.last_sign_in_at %></td>
+        <td><%= person.current_sign_in_ip %></td>
+        <td><%= person.last_sign_in_ip %></td>
+        <td><%= person.confirmation_token %></td>
+        <td><%= person.confirmed_at %></td>
+        <td><%= person.confirmation_sent_at %></td>
+        <td><%= person.unconfirmed_email %></td>
+        <td><%= person.authentication_token %></td>
+        <td><%=l person.created_at %></td>
+        <td>
+          <%= link_to t('.edit', :default => t("helpers.links.edit")),
+                      edit_person_path(person), :class => 'btn btn-mini' %>
+          <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+                      person_path(person),
+                      :method => :delete,
+                      :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
+                      :class => 'btn btn-mini btn-danger' %>
+        </td>
+      </tr>
+    <% end %>
+  </tbody>
 </table>
+
+<%= link_to t('.new', :default => t("helpers.links.new")),
+            new_person_path,
+            :class => 'btn btn-primary' %>
