--- a/app/views/people/show.html.erb
+++ b/app/views/people/show.html.erb
@@ -1,22 +1,59 @@
-<p id="notice"><%= notice %></p>
+<%- model_class = Person -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => model_class.model_name.human %></h1>
+</div>
 
-<%= @person.name %><br>
-<%= mail_to @person.email %><br>
-<%= @person.primary_phone_number %><br>
+<dl class="dl-horizontal">
+  <dt><strong><%= model_class.human_attribute_name(:first_name) %>:</strong></dt>
+  <dd><%= @person.first_name %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:last_name) %>:</strong></dt>
+  <dd><%= @person.last_name %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:primary_phone_number) %>:</strong></dt>
+  <dd><%= @person.primary_phone_number %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:date_of_birth) %>:</strong></dt>
+  <dd><%= @person.date_of_birth %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:signed_waiver) %>:</strong></dt>
+  <dd><%= @person.signed_waiver %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:email) %>:</strong></dt>
+  <dd><%= @person.email %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:encrypted_password) %>:</strong></dt>
+  <dd><%= @person.encrypted_password %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:reset_password_token) %>:</strong></dt>
+  <dd><%= @person.reset_password_token %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:reset_password_sent_at) %>:</strong></dt>
+  <dd><%= @person.reset_password_sent_at %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:remember_created_at) %>:</strong></dt>
+  <dd><%= @person.remember_created_at %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:sign_in_count) %>:</strong></dt>
+  <dd><%= @person.sign_in_count %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:current_sign_in_at) %>:</strong></dt>
+  <dd><%= @person.current_sign_in_at %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:last_sign_in_at) %>:</strong></dt>
+  <dd><%= @person.last_sign_in_at %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:current_sign_in_ip) %>:</strong></dt>
+  <dd><%= @person.current_sign_in_ip %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:last_sign_in_ip) %>:</strong></dt>
+  <dd><%= @person.last_sign_in_ip %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:confirmation_token) %>:</strong></dt>
+  <dd><%= @person.confirmation_token %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:confirmed_at) %>:</strong></dt>
+  <dd><%= @person.confirmed_at %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:confirmation_sent_at) %>:</strong></dt>
+  <dd><%= @person.confirmation_sent_at %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:unconfirmed_email) %>:</strong></dt>
+  <dd><%= @person.unconfirmed_email %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:authentication_token) %>:</strong></dt>
+  <dd><%= @person.authentication_token %></dd>
+</dl>
 
-<% @person.aptitudes.each do |aptitude| %>
-  <%= div_for aptitude do %>
-    <%= link_to_name aptitude.skill %>
-    (<%= aptitude.level %>)
-  <% end %>
-<% end %>
-
-On team(s):
-<% @person.roles.each do |role| %>
-  <%= div_for role do %>
-    <%= link_to_name role.team %>
-    (<%= link_to_name role.skill %>)
-  <% end %>
-<% end %>
-<%= link_to 'Edit', edit_person_path(@person) %> |
-<%= link_to 'Back', people_path %>
+<div class="form-actions">
+  <%= link_to t('.back', :default => t("helpers.links.back")),
+              people_path, :class => 'btn'  %>
+  <%= link_to t('.edit', :default => t("helpers.links.edit")),
+              edit_person_path(@person), :class => 'btn' %>
+  <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+              person_path(@person),
+              :method => 'delete',
+              :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
+              :class => 'btn btn-danger' %>
+</div>
