--- a/app/views/roles/show.html.erb
+++ b/app/views/roles/show.html.erb
@@ -1,20 +1,25 @@
-<p id="notice"><%= notice %></p>
+<%- model_class = Role -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => model_class.model_name.human %></h1>
+</div>
 
-<p>
-  <b>Person:</b>
-  <%= @role.person.name %>
-</p>
+<dl class="dl-horizontal">
+  <dt><strong><%= model_class.human_attribute_name(:person_id) %>:</strong></dt>
+  <dd><%= @role.person_id %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:team_id) %>:</strong></dt>
+  <dd><%= @role.team_id %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:skill_id) %>:</strong></dt>
+  <dd><%= @role.skill_id %></dd>
+</dl>
 
-<p>
-  <b>Team:</b>
-  <%= @role.team.name %>
-</p>
-
-<p>
-  <b>Skill:</b>
-  <%= @role.skill.name %>
-</p>
-
-
-<%= link_to 'Edit', edit_role_path(@role) %> |
-<%= link_to 'Back', roles_path %>
+<div class="form-actions">
+  <%= link_to t('.back', :default => t("helpers.links.back")),
+              roles_path, :class => 'btn'  %>
+  <%= link_to t('.edit', :default => t("helpers.links.edit")),
+              edit_role_path(@role), :class => 'btn' %>
+  <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+              role_path(@role),
+              :method => 'delete',
+              :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
+              :class => 'btn btn-danger' %>
+</div>
