--- a/app/views/streets/show.html.erb
+++ b/app/views/streets/show.html.erb
@@ -1,15 +1,23 @@
-<p id="notice"><%= notice %></p>
+<%- model_class = Street -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => model_class.model_name.human %></h1>
+</div>
 
-<p>
-  <b>Name:</b>
-  <%= @street.name %>
-</p>
+<dl class="dl-horizontal">
+  <dt><strong><%= model_class.human_attribute_name(:name) %>:</strong></dt>
+  <dd><%= @street.name %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:city_id) %>:</strong></dt>
+  <dd><%= @street.city_id %></dd>
+</dl>
 
-<p>
-  <b>City:</b>
-  <%= @street.city.name %>
-</p>
-
-
-<%= link_to 'Edit', edit_street_path(@street) %> |
-<%= link_to 'Back', streets_path %>
+<div class="form-actions">
+  <%= link_to t('.back', :default => t("helpers.links.back")),
+              streets_path, :class => 'btn'  %>
+  <%= link_to t('.edit', :default => t("helpers.links.edit")),
+              edit_street_path(@street), :class => 'btn' %>
+  <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+              street_path(@street),
+              :method => 'delete',
+              :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
+              :class => 'btn btn-danger' %>
+</div>
