--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -1,49 +1,56 @@
-<%= form_for(@task) do |f| %>
-  <% if @task.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@task.errors.count, "error") %> prohibited this task from being saved:</h2>
-
-      <ul>
-      <% @task.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
-      <% end %>
-      </ul>
+<%= form_for @task, :html => { :class => 'form-horizontal' } do |f| %>
+  <div class="control-group">
+    <%= f.label :name, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.text_field :name, :class => 'text_field' %>
     </div>
-  <% end %>
+  </div>
+  <div class="control-group">
+    <%= f.label :description, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.text_area :description, :class => 'text_area' %>
+    </div>
+  </div>
+  <div class="control-group">
+    <%= f.label :person_id, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.number_field :person_id, :class => 'number_field' %>
+    </div>
+  </div>
+  <div class="control-group">
+    <%= f.label :unit_id, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.number_field :unit_id, :class => 'number_field' %>
+    </div>
+  </div>
+  <div class="control-group">
+    <%= f.label :scheduled_start, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.datetime_select :scheduled_start, :class => 'datetime_select' %>
+    </div>
+  </div>
+  <div class="control-group">
+    <%= f.label :scheduled_end, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.datetime_select :scheduled_end, :class => 'datetime_select' %>
+    </div>
+  </div>
+  <div class="control-group">
+    <%= f.label :actual_start, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.datetime_select :actual_start, :class => 'datetime_select' %>
+    </div>
+  </div>
+  <div class="control-group">
+    <%= f.label :actual_end, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.datetime_select :actual_end, :class => 'datetime_select' %>
+    </div>
+  </div>
 
-  <div class="field">
-    <%= f.label :name %><br />
-    <%= f.text_field :name %>
-  </div>
-  <div class="field">
-    <%= f.label :description %><br />
-    <%= f.text_area :description %>
-  </div>
-  <div class="field">
-    <%= f.label :person_id, 'Contact Person' %><br />
-    <%= f.select :person_id, options_from_collection_for_select(Person.all, :id, :name) %>
-  </div>
-  <div class="field">
-    <%= f.label :unit_id %><br />
-    <%= f.select :unit_id, options_from_collection_for_select(Unit.all, :id, :full_name) %>
-  </div>
-  <div class="field">
-    <%= f.label :scheduled_start %><br />
-    <%= f.datetime_select :scheduled_start %>
-  </div>
-  <div class="field">
-    <%= f.label :scheduled_end %><br />
-    <%= f.datetime_select :scheduled_end %>
-  </div>
-  <div class="field">
-    <%= f.label :actual_start %><br />
-    <%= f.datetime_select :actual_start %>
-  </div>
-  <div class="field">
-    <%= f.label :actual_end %><br />
-    <%= f.datetime_select :actual_end %>
-  </div>
-  <div class="actions">
-    <%= f.submit %>
+  <div class="form-actions">
+    <%= f.submit nil, :class => 'btn btn-primary' %>
+    <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
+                tasks_path, :class => 'btn' %>
   </div>
 <% end %>
