--- a/app/views/team_admins/edit.html.erb
+++ b/app/views/team_admins/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing team_admin</h1>
-
-<%= render 'form' %>
-
-<%= link_to 'Show', @team_admin %> |
-<%= link_to 'Back', team_admins_path %>
+<%- model_class = TeamAdmin -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => t('helpers.titles.edit', :model => model_class.model_name.human,
+                                   :default => "Edit #{model_class.model_name.human}") %></h1>
+</div>
+<%= render :partial => 'form' %>
