--- a/app/views/team_admins/index.html.erb
+++ b/app/views/team_admins/index.html.erb
@@ -1,23 +1,76 @@
-<h1>Listing team_admins</h1>
-
-<table>
-  <tr>
-    <th></th>
-    <th></th>
-    <th></th>
-  </tr>
-
-<% @team_admins.each do |team_admin| %>
-  <tr>
-    <td><%= team_admin.name %></td>
-    <td><%= team_admin.phone_number %></td>
-    <td><%= team_admin.email %></td>
-    <td><%= link_to 'Show', team_admin %></td>
-    <td><%= link_to 'Edit', edit_team_admin_path(team_admin) %></td>
-  </tr>
-<% end %>
+<%- model_class = TeamAdmin -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => model_class.model_name.human.pluralize %></h1>
+</div>
+<table class="table table-striped">
+  <thead>
+    <tr>
+      <th><%= model_class.human_attribute_name(:id) %></th>
+      <th><%= model_class.human_attribute_name(:first_name) %></th>
+      <th><%= model_class.human_attribute_name(:last_name) %></th>
+      <th><%= model_class.human_attribute_name(:phone_number) %></th>
+      <th><%= model_class.human_attribute_name(:date_of_birth) %></th>
+      <th><%= model_class.human_attribute_name(:personal_statement) %></th>
+      <th><%= model_class.human_attribute_name(:active) %></th>
+      <th><%= model_class.human_attribute_name(:email) %></th>
+      <th><%= model_class.human_attribute_name(:encrypted_password) %></th>
+      <th><%= model_class.human_attribute_name(:reset_password_token) %></th>
+      <th><%= model_class.human_attribute_name(:reset_password_sent_at) %></th>
+      <th><%= model_class.human_attribute_name(:remember_created_at) %></th>
+      <th><%= model_class.human_attribute_name(:sign_in_count) %></th>
+      <th><%= model_class.human_attribute_name(:current_sign_in_at) %></th>
+      <th><%= model_class.human_attribute_name(:last_sign_in_at) %></th>
+      <th><%= model_class.human_attribute_name(:current_sign_in_ip) %></th>
+      <th><%= model_class.human_attribute_name(:last_sign_in_ip) %></th>
+      <th><%= model_class.human_attribute_name(:confirmation_token) %></th>
+      <th><%= model_class.human_attribute_name(:confirmed_at) %></th>
+      <th><%= model_class.human_attribute_name(:confirmation_sent_at) %></th>
+      <th><%= model_class.human_attribute_name(:unconfirmed_email) %></th>
+      <th><%= model_class.human_attribute_name(:authentication_token) %></th>
+      <th><%= model_class.human_attribute_name(:created_at) %></th>
+      <th><%=t '.actions', :default => t("helpers.actions") %></th>
+    </tr>
+  </thead>
+  <tbody>
+    <% @team_admins.each do |team_admin| %>
+      <tr>
+        <td><%= link_to team_admin.id, team_admin_path(team_admin) %></td>
+        <td><%= team_admin.first_name %></td>
+        <td><%= team_admin.last_name %></td>
+        <td><%= team_admin.phone_number %></td>
+        <td><%= team_admin.date_of_birth %></td>
+        <td><%= team_admin.personal_statement %></td>
+        <td><%= team_admin.active %></td>
+        <td><%= team_admin.email %></td>
+        <td><%= team_admin.encrypted_password %></td>
+        <td><%= team_admin.reset_password_token %></td>
+        <td><%= team_admin.reset_password_sent_at %></td>
+        <td><%= team_admin.remember_created_at %></td>
+        <td><%= team_admin.sign_in_count %></td>
+        <td><%= team_admin.current_sign_in_at %></td>
+        <td><%= team_admin.last_sign_in_at %></td>
+        <td><%= team_admin.current_sign_in_ip %></td>
+        <td><%= team_admin.last_sign_in_ip %></td>
+        <td><%= team_admin.confirmation_token %></td>
+        <td><%= team_admin.confirmed_at %></td>
+        <td><%= team_admin.confirmation_sent_at %></td>
+        <td><%= team_admin.unconfirmed_email %></td>
+        <td><%= team_admin.authentication_token %></td>
+        <td><%=l team_admin.created_at %></td>
+        <td>
+          <%= link_to t('.edit', :default => t("helpers.links.edit")),
+                      edit_team_admin_path(team_admin), :class => 'btn btn-mini' %>
+          <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+                      team_admin_path(team_admin),
+                      :method => :delete,
+                      :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
+                      :class => 'btn btn-mini btn-danger' %>
+        </td>
+      </tr>
+    <% end %>
+  </tbody>
 </table>
 
-<br />
-
-<%= link_to 'New Team admin', new_team_admin_path %>
+<%= link_to t('.new', :default => t("helpers.links.new")),
+            new_team_admin_path,
+            :class => 'btn btn-primary' %>
