--- a/app/views/team_admins/new.html.erb
+++ b/app/views/team_admins/new.html.erb
@@ -1,5 +1,6 @@
-<h1>New team_admin</h1>
-
-<%= render 'form' %>
-
-<%= link_to 'Back', team_admins_path %>
+<%- model_class = TeamAdmin -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => t('helpers.titles.new', :model => model_class.model_name.human,
+                                 :default => "New #{model_class.model_name.human}") %></h1>
+</div>
+<%= render :partial => 'form' %>
