--- a/app/views/team_admins/show.html.erb
+++ b/app/views/team_admins/show.html.erb
@@ -1,5 +1,61 @@
-<p id="notice"><%= notice %></p>
+<%- model_class = TeamAdmin -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => model_class.model_name.human %></h1>
+</div>
 
+<dl class="dl-horizontal">
+  <dt><strong><%= model_class.human_attribute_name(:first_name) %>:</strong></dt>
+  <dd><%= @team_admin.first_name %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:last_name) %>:</strong></dt>
+  <dd><%= @team_admin.last_name %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:phone_number) %>:</strong></dt>
+  <dd><%= @team_admin.phone_number %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:date_of_birth) %>:</strong></dt>
+  <dd><%= @team_admin.date_of_birth %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:personal_statement) %>:</strong></dt>
+  <dd><%= @team_admin.personal_statement %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:active) %>:</strong></dt>
+  <dd><%= @team_admin.active %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:email) %>:</strong></dt>
+  <dd><%= @team_admin.email %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:encrypted_password) %>:</strong></dt>
+  <dd><%= @team_admin.encrypted_password %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:reset_password_token) %>:</strong></dt>
+  <dd><%= @team_admin.reset_password_token %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:reset_password_sent_at) %>:</strong></dt>
+  <dd><%= @team_admin.reset_password_sent_at %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:remember_created_at) %>:</strong></dt>
+  <dd><%= @team_admin.remember_created_at %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:sign_in_count) %>:</strong></dt>
+  <dd><%= @team_admin.sign_in_count %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:current_sign_in_at) %>:</strong></dt>
+  <dd><%= @team_admin.current_sign_in_at %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:last_sign_in_at) %>:</strong></dt>
+  <dd><%= @team_admin.last_sign_in_at %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:current_sign_in_ip) %>:</strong></dt>
+  <dd><%= @team_admin.current_sign_in_ip %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:last_sign_in_ip) %>:</strong></dt>
+  <dd><%= @team_admin.last_sign_in_ip %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:confirmation_token) %>:</strong></dt>
+  <dd><%= @team_admin.confirmation_token %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:confirmed_at) %>:</strong></dt>
+  <dd><%= @team_admin.confirmed_at %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:confirmation_sent_at) %>:</strong></dt>
+  <dd><%= @team_admin.confirmation_sent_at %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:unconfirmed_email) %>:</strong></dt>
+  <dd><%= @team_admin.unconfirmed_email %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:authentication_token) %>:</strong></dt>
+  <dd><%= @team_admin.authentication_token %></dd>
+</dl>
 
-<%= link_to 'Edit', edit_team_admin_path(@team_admin) %> |
-<%= link_to 'Back', team_admins_path %>
+<div class="form-actions">
+  <%= link_to t('.back', :default => t("helpers.links.back")),
+              team_admins_path, :class => 'btn'  %>
+  <%= link_to t('.edit', :default => t("helpers.links.edit")),
+              edit_team_admin_path(@team_admin), :class => 'btn' %>
+  <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+              team_admin_path(@team_admin),
+              :method => 'delete',
+              :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
+              :class => 'btn btn-danger' %>
+</div>
