--- a/app/views/units/new.html.erb
+++ b/app/views/units/new.html.erb
@@ -1,5 +1,6 @@
-<h1>New unit</h1>
-
-<%= render 'form' %>
-
-<%= link_to 'Back', units_path %>
+<%- model_class = Unit -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => t('helpers.titles.new', :model => model_class.model_name.human,
+                                 :default => "New #{model_class.model_name.human}") %></h1>
+</div>
+<%= render :partial => 'form' %>
